--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -27,6 +27,14 @@ publisher = {Cambridge University Press},
      year = {2006},
 }
 
+@book{tame,
+title = "{Johdatus taivaanmekaniikkaan}",
+author = {Karttunen, H.},
+address = {Helsinki},
+publisher = {Tähtitieteellinen yhdistys Ursa},
+year = {1987},
+}
+
 @ARTICLE{eisenhauer:2018,
    author = {{Gravity Collaboration} and {Abuter}, R. and {Amorim}, A. and 
 	{Anugu}, N. and {Baub{\"o}ck}, M. and {Benisty}, M. and {Berger}, J.~P. and 
