--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -27,6 +27,15 @@ publisher = {Cambridge University Press},
      year = {2006},
 }
 
+@BOOK{galdy,
+   author = {{Binney}, J. and {Tremaine}, S.},
+    title = "{Galactic Dynamics: Second Edition}",
+     year = 2008,
+publisher = {Princeton University Press},
+   adsurl = {http://adsabs.harvard.edu/abs/2008gady.book.....B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @book{tame,
 title = "{Johdatus taivaanmekaniikkaan}",
 author = {Karttunen, H.},
