--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -27,7 +27,7 @@ publisher = {Cambridge University Press},
      year = {2006},
 }
 
-@BOOK{galdy,
+@BOOK{bt-galdyn,
    author = {{Binney}, J. and {Tremaine}, S.},
     title = "{Galactic Dynamics: Second Edition}",
      year = 2008,
